# nba-goaltend-project

./: .gitignore  README.md  code.py  code2.py  pyproject.toml  requirements.txt  videoFrameNavigator.py
data/: README.md  close_calls_labels.csv
data/Ball on Rim - Segmented/: ball_on_rim_1_event_01.csv  ball_on_rim_1_event_02.csv  ball_on_rim_1_event_03.csv  ball_on_rim_1_event_04.csv  ball_on_rim_1_event_05.csv  ball_on_rim_2_event_01.csv  ball_on_rim_2_event_02.csv  ball_on_rim_2_event_03.csv  ball_on_rim_2_event_04.csv  ball_on_rim_2_event_05.csv  ball_on_rim_3_event_01.csv  ball_on_rim_3_event_02.csv  ball_on_rim_3_event_03.csv  ball_on_rim_3_event_04.csv
data/Blocks - Segmented/: block_light_1_event_01.csv  block_light_1_event_02.csv  block_light_1_event_03.csv  block_light_1_event_04.csv  block_light_1_event_05.csv  block_light_3_event_01.csv  block_light_3_event_02.csv  block_light_3_event_03.csv  block_light_3_event_04.csv  block_light_3_event_05.csv  block_light_4_event_01.csv  block_light_4_event_02.csv  block_light_4_event_03.csv  block_light_4_event_04.csv  block_light_4_event_05.csv
data/Close Calls/: 10ft_close_calls_right_1.csv  10ft_close_calls_right_10.csv  10ft_close_calls_right_11.csv  10ft_close_calls_right_12.csv  10ft_close_calls_right_13.csv  10ft_close_calls_right_14.csv  10ft_close_calls_right_15.csv  10ft_close_calls_right_16.csv  10ft_close_calls_right_17.csv  10ft_close_calls_right_2.csv  (+61 more)
notebooks/: goaltend_spectrogram_analysis.ipynb  goaltend_spectrogram_analysis_executed.ipynb  other_data_sensor_visualization_executed.ipynb
syncing_video_data/: README.md  code.py  code2.py  videoFrameNavigator.py
(+94 files in other folders)
